--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -4,8 +4,14 @@
 
 <h2>Student List:-</h2>
 <ul>
-@foreach(var stud in StudentName)
+    @foreach(var stud in StudentName)
 {
-<li>@stud</li>
+    <li>@stud</li>
 }
 </ul>
+
+<h3>Image One</h3>
+<img src="~/ImageFolderOne/hungarian.png"  height="120" width="120" />
+<br /><br />
+<h3>Image Two</h3>
+<img src="~/ImageFolderOne/20191006_165727.jpg" height="120" width="120" />
